--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,17 @@ dependencies:
   qr_code_scanner: ^0.4.0
   url_launcher: ^6.0.10
   http: ^0.13.3
+  hive: ^2.0.3
+  hive_flutter: ^1.0.0
+  favicon: ^1.0.15
+  network_to_file_image: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.12.2
+  hive_generator: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
