--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   animated_widgets: ^1.1.0
   motion_toast: ^1.4.0
+  modals: ^0.0.2+2
+  spring_button: ^2.0.0
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +50,13 @@ dev_dependencies:
 
   build_runner: ^1.12.2
   hive_generator: ^1.0.1
+  flutter_native_splash: ^1.2.3
+
+flutter_native_splash:
+  color: '#FBFBFB'
+  image: assets/click/Aggiungi_qui_light.png
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
