--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   motion_toast: ^1.4.0
   modals: ^0.0.2+2
   spring_button: ^2.0.0
+  modal_bottom_sheet: ^2.0.0
+  backdrop_modal_route: ^2.0.2
+  emoji_alert: ^1.1.0
 
 
 
@@ -51,10 +54,16 @@ dev_dependencies:
   build_runner: ^1.12.2
   hive_generator: ^1.0.1
   flutter_native_splash: ^1.2.3
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: assets/logo/logo_menus.png
 
 flutter_native_splash:
   color: '#FBFBFB'
-  image: assets/click/Aggiungi_qui_light.png
+  image: assets/logo/menus.png
   android: true
   ios: true
 
