--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   backdrop_modal_route: ^2.0.2
   emoji_alert: ^1.1.0
+  rflutter_alert: ^2.0.4
+  device_preview: ^0.7.4
 
 
 
@@ -53,19 +55,19 @@ dev_dependencies:
 
   build_runner: ^1.12.2
   hive_generator: ^1.0.1
-  flutter_native_splash: ^1.2.3
-  flutter_launcher_icons: "^0.9.2"
+#  flutter_native_splash: ^1.2.3
+#  flutter_launcher_icons: "^0.9.2"
 
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: assets/logo/logo_menus.png
+#flutter_icons:
+#  android: "launcher_icon"
+# ios: true
+# image_path: assets/logo/logo_menus.png
 
-flutter_native_splash:
-  color: '#FBFBFB'
-  image: assets/logo/menus.png
-  android: true
-  ios: true
+#flutter_native_splash:
+#  color: '#FBFBFB'
+#  image: assets/logo/menus.png
+#  android: true
+#  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
