--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   device_preview: ^0.7.4
   animations: ^2.0.1
   flutter_animated_dialog: ^2.0.1
+  shared_preferences: ^2.0.7
+  animated_splash_screen: ^1.1.0
+  splashscreen: ^1.3.5
 
 
 
@@ -57,19 +60,19 @@ dev_dependencies:
 
   build_runner: ^1.12.2
   hive_generator: ^1.0.1
-#  flutter_native_splash: ^1.2.3
-#  flutter_launcher_icons: "^0.9.2"
+  flutter_native_splash: ^1.2.3
+  flutter_launcher_icons: "^0.9.2"
 
-#flutter_icons:
-#  android: "launcher_icon"
-# ios: true
-# image_path: assets/logo/logo_menus.png
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: assets/logo/logone.png
 
-#flutter_native_splash:
-#  color: '#FBFBFB'
-#  image: assets/logo/menus.png
-#  android: true
-#  ios: true
+flutter_native_splash:
+  color: '#FBFBFB'
+  image: assets/logo/logo_400.png
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -86,6 +89,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/click/
+    - assets/logo/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
