--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   shared_preferences: ^2.0.7
   animated_splash_screen: ^1.1.0
   splashscreen: ^1.3.5
+  select_form_field: ^2.2.0
+  line_icons: ^2.0.1
+  flutter_advanced_drawer: ^1.2.3+1
 
 
 
@@ -90,6 +93,7 @@ flutter:
   assets:
     - assets/click/
     - assets/logo/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
